src/objects/Prvok__c.object
<CustomObject>
    <fields>
        <fullName>Miestnost__c</fullName>
        <label>Miestnosť</label>
        <referenceTo>Miestnost__c</referenceTo>
        <relationshipLabel>Prvky</relationshipLabel>
        <relationshipName>Prvky</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Prvok__c</fullName>
        <description>názov prvku</description>
        <label>Prvok</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bytový rozdelovač</fullName>
                </value>
                <value>
                    <fullName>Chladiaca jednotka</fullName>
                </value>
                <value>
                    <fullName>Dátová zásuvka</fullName>
                </value>
                <value>
                    <fullName>Domáci telefón</fullName>
                </value>
                <value>
                    <fullName>Doplnkové pospájanie</fullName>
                </value>
                <value>
                    <fullName>Elektrická zásuvka</fullName>
                </value>
                <value>
                    <fullName>Elektrická zásuvka s krytom v zateplení</fullName>
                </value>
                <value>
                    <fullName>Elektrický vývod zo steny</fullName>
                </value>
                <value>
                    <fullName>Interiérové dvere</fullName>
                </value>
                <value>
                    <fullName>Keramický obklad</fullName>
                </value>
                <value>
                    <fullName>Kúpeľňové umývadlo</fullName>
                </value>
                <value>
                    <fullName>Ovládanie žaluzii</fullName>
                </value>
                <value>
                    <fullName>Práčkový vývod</fullName>
                </value>
                <value>
                    <fullName>Radiátor</fullName>
                </value>
                <value>
                    <fullName>Rebríkový radiátor</fullName>
                </value>
                <value>
                    <fullName>Rohový ventil</fullName>
                </value>
                <value>
                    <fullName>Spínač jednopólový</fullName>
                </value>
                <value>
                    <fullName>Spínač sériový</fullName>
                </value>
                <value>
                    <fullName>Spínač striedavý</fullName>
                </value>
                <value>
                    <fullName>Sprchová/Vaňová zmiešavacia batéria</fullName>
                </value>
                <value>
                    <fullName>Stropné svietdilo</fullName>
                </value>
                <value>
                    <fullName>Stropné svietidlo</fullName>
                </value>
                <value>
                    <fullName>Umývadlo</fullName>
                </value>
                <value>
                    <fullName>Vchodové dvere</fullName>
                </value>
                <value>
                    <fullName>WC komplet</fullName>
                </value>
                <value>
                    <fullName>Zásuvka 2-rámik</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SpecifikaciaPreStavbu__c</fullName>
        <label>Špecifikácia pre stavbu</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Prvok</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Prvok__c</columns>
        <columns>Miestnost__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Prvok ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prvky</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>